# django-service-layer

./: .gitignore  README.md  example.py  logstash.conf  pyproject.toml
src/apps/core/service/: handle_error.py
src/apps/customer/: admin.py  models.py
src/apps/product/: admin.py  exceptions.py  models.py  views.py
src/apps/product/dtos/: __init__.py
src/apps/product/serializers/: __init__.py  buy_product_serializer.py
src/apps/product/services/: __init__.py  buy_product_service.py  send_crm_service.py  send_email_service.py
src/apps/product/services/dtos/: buy_product_dto.py
src/config/: container.py  middlewares.py  settings.py
src/core/: __init__.py  service.py
src/core/service/: __init__.py  base.py  handle_error.py
utils/: populate_kibana_logs.py
