[project]
name = "django-service-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-rest-framework>=0.1.0",
    "django-stubs>=5.2.8",
    "djangorestframework-stubs>=3.16.6",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-logstash>=0.4.8",
]
